feat: BinaryContent 도메인에서 기존에 구현했던 예외를 커스텀 예외로 대체